fix layout bugs in mobile design

--- a/src/components/PlayList/playlist.module.css
+++ b/src/components/PlayList/playlist.module.css
@@ -27,6 +27,10 @@
 
 }
 
+.playlist-btn {
+    display: none;
+}
+
 .playlist.full {
     flex: 1;
 }
@@ -154,6 +158,7 @@
     }
 
     .playlist-btn {
+        display: block;
         color: #fff;
         font-size: 1rem;
         width: 100%;
