--- a/src/components/Player/player.module.css
+++ b/src/components/Player/player.module.css
@@ -10,9 +10,6 @@
     width: 60%;
 }
 
-.open-playlistbtn {
-    display: none;
-}
 
 .player .close-btn {
     padding: 0.5rem 1rem;
